--- a/zmarket-member/src/main/resources/application.yml
+++ b/zmarket-member/src/main/resources/application.yml
@@ -6,6 +6,14 @@ spring:
     url: jdbc:mysql://1.15.89.136:3306/zmarket_ums?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai
     username: root
     password: Zz15882202696
+  cloud:
+    nacos:
+      discovery:
+        server-addr: localhost:8848
+      config:
+        server-addr: localhost:8848
+  application:
+    name: zmarket-member
 mybatis-plus:
   global-config:
     db-config:
