--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
         <module>renren-fast</module>
         <module>renren-generator</module>
         <module>zmarket-common</module>
+        <module>zomkc-gateway</module>
     </modules>
 
 
