--- a/zmarket-product/src/main/resources/application.yml
+++ b/zmarket-product/src/main/resources/application.yml
@@ -6,7 +6,16 @@ spring:
     url: jdbc:mysql://1.15.89.136:3306/zmarket_pms?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai
     username: root
     password: Zz15882202696
+  application:
+    name: zmarket-product
+  cloud:
+    nacos:
+      discovery:
+        server-addr: localhost:8848
 mybatis-plus:
   global-config:
     db-config:
       id-type: auto
+      logic-delete-field: showStatus # 全局逻辑删除的实体字段名(since 3.3.0,配置后可以忽略不配置实体类)
+      logic-not-delete-value: 1 # 逻辑未删除值(默认为 0)
+      logic-delete-value: 0 # 逻辑已删除值(默认为 1)
