--- a/zmarket-product/src/main/resources/application.yml
+++ b/zmarket-product/src/main/resources/application.yml
@@ -13,6 +13,8 @@ spring:
       discovery:
         server-addr: localhost:8848
 mybatis-plus:
+  configuration:
+    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
   global-config:
     db-config:
       id-type: auto
