--- a/zomkc-gateway/src/main/resources/application.yml
+++ b/zomkc-gateway/src/main/resources/application.yml
@@ -14,6 +14,12 @@ spring:
             - Path=/api/product/**
           filters:
             - RewritePath=/api/(?<segment>.*),/$\{segment}
+        - id: zmarket-member
+          uri: lb://zmarket-member
+          predicates:
+            - Path=/api/member/**
+          filters:
+            - RewritePath=/api/(?<segment>.*),/$\{segment}
         - id: zmarket-third-party
           uri: lb://zmarket-third-party
           predicates:
