--- a/zmarket-product/src/main/resources/application.yml
+++ b/zmarket-product/src/main/resources/application.yml
@@ -12,6 +12,8 @@ spring:
     nacos:
       discovery:
         server-addr: localhost:8848
+  jackson:
+    date-format: YYYY-MM-dd HH:mm:ss
 mybatis-plus:
   configuration:
     log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
