--- a/zmarket-third-party/src/main/resources/bootstrap.yml
+++ b/zmarket-third-party/src/main/resources/bootstrap.yml
@@ -1,6 +1,6 @@
 spring:
   application:
-    name: zzmarket-third-party #服务名称
+    name: zmarket-third-party #服务名称
   cloud:
     nacos:
       config:
