--- a/zmarket-product/src/main/resources/application.yml
+++ b/zmarket-product/src/main/resources/application.yml
@@ -1,6 +1,10 @@
 server:
   port: 8084
 spring:
+  redis:
+    host: localhost
+    port: 6379
+    password: root
   mvc:
     static-path-pattern: /static/**
   datasource:
